--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
+        <link href="https://fonts.cdnfonts.com/css/cursed-timer-ulil" rel="stylesheet">
     </head>
     <body>
         <div class="container">
-            <div>
+            <div class="innerContainer">
                 <h3>HOME</h3>
+                <div class="scoreContainer">
+                <p class="homeScore">0</p>
+                </div>
+                <div class="buttonContainer">
+                    <button class="scoreButton">+1</button>
+                    <button class="scoreButton">+2</button>
+                    <button class="scoreButton">+3</button>
+                </div>    
             </div>
-            <div>
+            <div class="innerContainer">
                 <h3>GUEST</h3>
+                <div class="scoreContainer">
+                <p class="guestScore">0</p>
+                </div>
+                <div class="buttonContainer">
+                    <button class="scoreButton">+1</button>
+                    <button class="scoreButton">+2</button>
+                    <button class="scoreButton">+3</button>
+                </div>    
             </div>
         </div>
         <script src="index.js"></script>
